# hyperspace-db

./: .dockerignore  .env  .gitignore  404.html  ARCHITECTURE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CITATION.cff  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  DockerHub.md  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.cuda  GOLD_MASTER_REPORT.md  IMPLEMENTATION_REPORT.md  Justfile  LICENSE  README.md  SECURITY.md  SNAPSHOT_OPTIMIZATION_GUIDE.md  SPRINT_1_2_REPORT.md  SPRINT_3_FINAL_REPORT.md  SPRINT_3_REPORT.md  TODO.md  TODO_ADOPTION.md  TODO_V1.2.md  api.html  architecture.html  benchmarks.html  distributed.html  docker-compose.yaml  durability.html  embeddings.html  features.html  gpu_roadmap.html  hnsw.html  hybrid.html  (+23 more)
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: BENCHMARK_QUICKSTART.md  BENCHMARK_REPORT.html  BENCHMARK_RESULTS.md  BENCHMARK_STORY.md  BENCHMARK_STORY_MODULAR.md  BENCHMARK_SYSTEM_REPORT.md  BENCHMARK_YAR_ULTIMATE.md  HYPERBOLIC_BENCHMARK_RESULTS.md  README.md  README_BENCHMARK_SECTION.md  STRESS_TEST_REPORT.html  docker-compose.yml  download_dataset.py  plugin_runtime.py  requirements.txt  run_all.sh  run_benchmark.py  run_benchmark.sh  run_benchmark_hyperbolic.py  run_benchmark_legacy.py  run_benchmark_next.py  run_durability_benchmark.py  run_graph_traversal_benchmark.py  run_l2_1m.py  run_log_direct.txt  run_log_direct_100k.txt  run_log_direct_1m.txt  run_poicare_1m.py  run_unified_benchmark.py  run_yar_integrated_bench.py  stress_test.py  stress_test_allDB.py  test_all_embeddings.py
benchmarks/db_plugins/: __init__.py  base.py  registry.py
crates/hyperspace-cli/: CLUSTER_TEST.md  Cargo.toml
crates/hyperspace-cli/src/: app.rs  main.rs  ui.rs
crates/hyperspace-core/: Cargo.toml
crates/hyperspace-core/benches/: distance_bench.rs  gpu_dispatch_bench.rs  metric_bench.rs
crates/hyperspace-core/src/: bm25.rs  config.rs  fuzzy.rs  gpu.rs  gromov.rs  lib.rs  metric.rs  optim.rs  region.rs  tests.rs  vector.rs  wasserstein.rs
crates/hyperspace-embed/: Cargo.toml
crates/hyperspace-embed/src/: lib.rs
crates/hyperspace-index/: Cargo.toml
crates/hyperspace-index/src/: lib.rs  stopwords.rs  tokenizer.rs
crates/hyperspace-index/tests/: concurrency_test.rs  graph_traversal_test.rs  persistence_test.rs  prop_hnsw.proptest-regressions  prop_hnsw.rs
crates/hyperspace-proto/: Cargo.toml  build.rs
crates/hyperspace-proto/proto/: hyperspace.proto
crates/hyperspace-proto/src/: lib.rs
crates/hyperspace-sdk/: Cargo.toml  README.md
crates/hyperspace-sdk/examples/: basic.rs  fuzzy_logic.rs
crates/hyperspace-sdk/src/: embedder.rs  fuzzy.rs  gromov.rs  lib.rs  math.rs
crates/hyperspace-server/: Cargo.toml
crates/hyperspace-server/src/: chunk_backend.rs  chunk_searcher.rs  collection.rs  gossip.rs  http_server.rs  main.rs  manager.rs  meta_router.rs  sync.rs  tests.rs
crates/hyperspace-store/: Cargo.toml
crates/hyperspace-store/src/: lib.rs  mmap_impl.rs  ram_impl.rs  wal.rs
crates/hyperspace-store/tests/: integrity.rs  prop_wal.rs
crates/hyperspace-tiering/: Cargo.toml
crates/hyperspace-tiering/src/: backend.rs  config.rs  lib.rs  local.rs  s3.rs
crates/hyperspace-wasm/: Cargo.toml
crates/hyperspace-wasm/src/: lib.rs
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
deploy/docker/: Dockerfile
deploy/k8s/: statefulset.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  LORENTZ_QUANTIZATION.md  SPRINT_4_OPTIMIZATION.md  integrations.md  wasm.md
docs/articles/: hyperbolic-rag.md  merkle-tree-sync.md  rust-64x-compression.md
docs/book/: book.toml
examples/hivemind/: README.md  index.html  package.json  vite.config.ts
examples/hivemind-cli/: Cargo.toml
examples/hivemind-cli/src/: main.rs
examples/hivemind/src-tauri/: Cargo.toml  tauri.conf.json
examples/hivemind/src-tauri/src/: main.rs
examples/python/: basic_usage.py  embedding_usage.py  langchain_server_side.py  langchain_simple.py
examples/ts/: basic_usage.ts  embedding_usage.ts  langchain_server_side.ts  langchain_simple.ts
examples/ts-showcase/: package.json
examples/wasm-demo/: index.html
integrations/langchain-js/: README.md  package.json  tsconfig.json
integrations/langchain-python/: README.md  generate_proto.sh  pyproject.toml  pytest.ini
integrations/llamaindex-js/: README.md  package.json  smoke_test.ts
integrations/llamaindex-python/: README.md  pyproject.toml
integrations/llamaindex-python/src/llama_index_hyperspace/: vector_stores.py
integrations/llamaindex-python/src/llama_index_vector_stores_hyperspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrations/mcp-hyperspacedb/: README.md  package.json  tsconfig.json
scripts/: benchmark.sh  build_wasm.sh  run_cluster_tests.sh  test_batch_insert.py  verify_build.sh
sdks/cpp/: CMakeCache.txt  CMakeLists.txt  README.md
sdks/cpp/include/hyperspace/: client.hpp  math.hpp
sdks/cpp/proto/: hyperspace.grpc.pb.cc  hyperspace.grpc.pb.h  hyperspace.pb.cc  hyperspace.pb.h
sdks/cpp/src/: client.cpp
sdks/dart/: README.md  pubspec.yaml
sdks/python/: README.md  generate_protos.sh  hyperspace_client.py  hyperspace_pb2.py  hyperspace_pb2_grpc.py  pyproject.toml  test_cognitive.py  test_search.py
sdks/python/hyperspace/: __init__.py  agents.py  client.py  math.py
sdks/python/hyperspace/proto/: hyperspace_pb2.py  hyperspace_pb2_grpc.py
sdks/python/hyperspacedb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdks/ros2/ros2_hyperspace_node/: CMakeLists.txt  package.xml
sdks/ros2/ros2_hyperspace_node/src/: tribunal_router_node.cpp
tests/: check_hyperspace.py  integration_test.py  memory_test.py  ping_saas_grpc.py  requirements.txt  smoke_1024.py  test_advanced_filter.py  test_auth.py  test_cluster_sync.py  test_hybrid.py  test_hyperbolic.py  test_l2.py  test_langchain_js.ts  test_langchain_python.py  test_llamaindex_js.ts  test_llamaindex_python.py  test_local_sync_final.py  test_local_sync_logic.py  test_replication.py  test_swarm_gossip.py
(+111 files in other folders)
