[package]
name = "hyperspace-cli"
version = "2.0.0"
edition = "2021"

[dependencies]
ratatui = { workspace = true }
crossterm = "0.27"
tokio = { workspace = true, features = ["full"] }
hyperspace-proto = { workspace = true }
hyperspace-core = { workspace = true }
tonic = { workspace = true }
rand = "0.8"
hyperspace-sdk = { path = "../hyperspace-sdk" }
chrono = "0.4"
