[package]
name = "hyperspace-core"
version = "3.0.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
async-trait = "0.1.89"
wgpu = { version = "*", optional = true }
pollster = { version = "*", optional = true }
bytemuck = { version = "*", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest.workspace = true
rand = "~0.8"

[[bench]]
name = "metric_bench"
harness = false

[[bench]]
name = "gpu_dispatch_bench"
harness = false

[features]
default = []
nightly-simd = []
gpu-runtime = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
