[package]
name = "hyperspace-embed"
version = "2.0.0"
edition = "2021"
description = "Universal Embedding Wrapper for HyperspaceDB (Local ONNX + Remote APIs)"

[dependencies]
ort = { version = "2.0.0-rc.0", features = ["download-binaries", "load-dynamic"] } 
tokenizers = { version = "0.15", features = ["onig"] }
ndarray = "0.17"

anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] } # Required for API support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
