[package]
name = "hyperspace-index"
version = "1.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12"
rand = "0.8"
smallvec = { workspace = true }
ordered-float = "4.0"
hyperspace-core = { path = "../hyperspace-core" }
hyperspace-store = { path = "../hyperspace-store" }
rkyv = { workspace = true, features = ["validation"] }
roaring = "0.11.3"
dashmap = "6.1.0"
serde = { workspace = true, features = ["derive"] }
