[package]
name = "hyperspace-index"
version = "3.0.3"
edition = "2021"

[dependencies]
parking_lot = "0.12"
rand = "0.8"
smallvec = { workspace = true }
ordered-float = "4.0"
hyperspace-core = { path = "../hyperspace-core" }
hyperspace-store = { path = "../hyperspace-store", default-features = false }
rkyv = { workspace = true, features = ["validation"] }
roaring = "0.11.3"
dashmap = "6.1.0"
boxcar = "0.2"
rayon = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
memmap2 = { workspace = true, optional = true }
crossbeam-skiplist = "0.1.3"
rust-stemmers = "1.2.0"
regex = "1.12.3"

[features]
default = ["persistence"]
persistence = ["hyperspace-store/mmap", "dep:memmap2"]
nightly-simd = ["hyperspace-core/nightly-simd"]

[dev-dependencies]
proptest = "1.0"
tempfile = "3.8"

