[package]
name = "hyperspace-sdk"
version = "2.2.1"
edition = "2021"
description = "Official Rust SDK for HyperspaceDB gRPC API"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = ["vector-database", "ann", "grpc", "hnsw", "hyperspace"]
categories = ["database", "api-bindings"]

[features]
default = []
embedders = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:async-trait"]

[dependencies]
hyperspace-proto = { version = "2.2.1" }
tonic = "0.10"
tokio = { version = "1.35", features = ["full"] }

# Embedder dependencies (Optional)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
