[package]
name = "hyperspace-server"
version = "1.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
hyperspace-proto = { workspace = true }
hyperspace-core = { workspace = true }
hyperspace-index = { workspace = true }
hyperspace-store = { workspace = true }
tokio-stream = "0.1"
rand = "0.8"
sha2 = "0.10.9"
hex = "0.4.3"
clap = { version = "4.5.54", features = ["derive"] }
dotenv = "0.15.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.149"
dashmap = "6.1.0"
axum = "0.8.8"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
sysinfo = "0.32"
uuid = { version = "1.7", features = ["v4", "serde"] }
