[package]
name = "hyperspace-store"
version = "2.0.0"
edition = "2021"

[dependencies]
memmap2 = { workspace = true, optional = true }
thiserror = { workspace = true }
hyperspace-core = { workspace = true }
byteorder = "1.5.0"
parking_lot.workspace = true
crc32fast = "1.5.0"

[features]
default = ["mmap"]
mmap = ["dep:memmap2"]

[dev-dependencies]
tempfile = "3.8"
proptest = "1.0"

