[package]
name = "hyperspace-wasm"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
hyperspace-core = { path = "../hyperspace-core" }
hyperspace-index = { path = "../hyperspace-index", default-features = false }
hyperspace-store = { path = "../hyperspace-store", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
parking_lot = "0.12"
getrandom = { version = "0.2", features = ["js"] }
rexie = "0.4"
