[package]
name = "hivemind-cli"
version = "3.0.0"
edition = "2021"

[dependencies]
hyperspace-core = { path = "../../crates/hyperspace-core" }
hyperspace-index = { path = "../../crates/hyperspace-index", features = ["persistence"] }
hyperspace-store = { path = "../../crates/hyperspace-store", features = ["mmap"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
env_logger = "0.10"
log = "0.4"
