[package]
name = "hivemind-app"
version = "0.1.0"
authors = ["YAR"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
pdf-extract = "0.7"
walkdir = "2"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
anyhow = "1.0"

# Local DB
hyperspace-core = { path = "../../../crates/hyperspace-core" }
hyperspace-index = { path = "../../../crates/hyperspace-index", features = ["persistence"] }
hyperspace-store = { path = "../../../crates/hyperspace-store", features = ["mmap"] }
