<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_hyperspace_node</name>
  <version>3.0.0</version>
  <description>ROS2 Node for HyperspaceDB Cognitive SDK & Tribunal Framework</description>
  <maintainer email="hello@yarlabs.ai">YARlabs</maintainer>
  <license>ISC</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hyperspace_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
